<resources>
    <string name="app_name">Attendance Manager</string>
    <string name="attendance_manager">ATTENDANCE MANAGER</string>
    <string name="attendance_manager1">Attendance Manager</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_student_login">StudentLogin</string>
    <string name="title_activity_faculty_login">FacultyLogin</string>
    <string name="username">Username</string>

    <string name="sign_in">SIGN IN</string>
    <string name="admin">Admin</string>
    <string name="textview">TextView</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="submit">SUBMIT</string>


    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admission_number_only_digits">Admission Number(only digits)</string>
    <string name="phone_no">Phone No</string>
    <string name="admission_number">Admission Number</string>
    <string name="branch">Branch</string>
    <string name="create">CREATE</string>
    <string-array name="branch">
        <item>SelectBranch</item>
        <item> cse</item>
    </string-array>
    <string-array name="subject">
        <item>SelectSubject</item>
        <item> 0</item>
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>

    </string-array>
</resources>